# schimpy

./: .buildinfo  .gitattributes  .gitignore  AGENTS.md  AUTHORS.rst  CNAME  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  SKILLS.md  _version.py  authors.html  contributing.html  depth.html  direct_use.html  genindex.html  history.html  hotstart.html  index.html  installation.html  license_and_disclaimer.html  meta.yaml  model_time.html  modules.html  nudging.html  objects.inv  performance.html  postprocessing.html  preprocessing.html  py-modindex.html  pyproject.toml  readme.html  schimpy.html  schimpy.util.html  schimpy_cli.html  schimpy_env.yml  search.html  (+8 more)
.github/: ISSUE_TEMPLATE.md  copilot-instructions.md
.github/workflows/: build_sphinx.yml  python-package-conda.yml
_sources/: depth.rst.txt  index.rst.txt  license_and_disclaimer.rst.txt  modules.rst.txt  nudging.rst.txt  performance.rst.txt  preprocessing.rst.txt  schimpy.rst.txt  schimpy.util.rst.txt  schimpy_cli.rst.txt  sms.rst.txt  spatial.rst.txt
_static/: documentation_options.js
conda.recipe/: meta.yaml
docs/doctrees/: authors.doctree  contributing.doctree  depth.doctree  direct_use.doctree  history.doctree  index.doctree  installation.doctree  introduction.doctree  license_and_disclaimer.doctree  model_time.doctree  modules.doctree  performance.doctree  postprocessing.doctree  preprocessing.doctree  readme.doctree  schimpy.doctree  sms.doctree  spatial.doctree  usage.doctree
docs/html/: .buildinfo  authors.html  contributing.html  depth.html  direct_use.html  genindex.html  history.html  hotstart.html  index.html  installation.html  introduction.html  license_and_disclaimer.html  model_time.html  modules.html  nudging.html  objects.inv  performance.html  postprocessing.html  preprocessing.html  py-modindex.html  readme.html  schimpy.html  search.html  searchindex.js  sms.html  spatial.html  usage.html
docs/html/_modules/: index.html
docs/html/_sources/: depth.rst.txt  index.rst.txt  license_and_disclaimer.rst.txt  model_time.rst.txt  modules.rst.txt  postprocessing.rst.txt  schimpy.rst.txt  sms.rst.txt
docs/html/_static/: documentation_options.js
docsrc/: Makefile  conf.py  depth.rst  direct_use.rst  doall.bat  hotstart.rst  index.rst  installation.rst  introduction.rst  make.bat  model_time.rst  nudging.rst  preprocessing.rst  requirements.txt  schimpy.rst  sms.rst  spatial.rst
docsrc/_build/doctrees/: contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  modules.doctree  readme.doctree  schimpy.doctree  usage.doctree
docsrc/_build/html/: .buildinfo  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  readme.html  schimpy.html  search.html  searchindex.js  usage.html
docsrc/_static/: style.css
docsrc/_templates/: breadcrumbs.html  layout.html  package.rst_t
examples/: hotstart_nudging_data.py  test_create_nudging.py
examples/schism_hotstart/basic/: create_hotstart.py  hotstart.yaml
examples/schism_hotstart/bio/: create_hotstart.py  hotstart_cosine.yaml  hotstart_cosine_icm.yaml
examples/schism_hotstart/data_in/: all_stations_salinity_2021-04-20.csv  all_stations_temperature.csv  all_stations_temperature_2021-04-20.csv  all_stations_turbidity.csv
examples/schism_hotstart/sed/: example_hotstart.py  hotstart.yaml
examples/schism_hotstart/shapefile/: DomainPolygons.dbf  DomainPolygons.shx  RegionsPolygon.dbf  RegionsPolygon.shp  RegionsPolygon.shx
examples/schism_hotstart/simple_triquad/: hgrid1.gr3  hotstart1_elev0.in  vgrid1.in
examples/schism_hotstart/tracer_age/: create_hotstart.py  create_hotstart_hotstart.py  create_hotstart_hotstart_gen.py  hotstart_barotropic.yaml  hotstart_from_hotstart.yaml  hotstart_from_hydro.yaml  hotstart_from_prev_hotstart.yaml  hotstart_from_prev_hotstart_GEN_AGE.yaml
examples/schism_nudging/: create_nudging_hycom.py  nudge.yaml  nudge_hycom.yaml  nudge_obs_roms.yaml
schimpy/: InputParser.py  Interp2D.py  __init__.py  __main__.py  _version.py  archive_dates.txt  archive_ts.py  base_io.py  batch_metrics.py  batch_metrics_sample.yaml  bay_delta_hotstart.f90  bay_delta_hotstart.py  bctide.py  bound_linear.py  cencoos_download.py  check_mesh_skewness.py  check_vgrid.py  cli.py  clip_beyond_subdomain.py  clip_dems.py  combine_consume.py  combine_flux.py  conductivity2S.m  contour_smooth.py  convert_linestrings.py  convert_mesh.py  convert_points.py  convert_polygons.py  convert_sav_class_to_number.py  create_mesh_n_levels.py  create_station_output.py  create_vgrid_lsc2.py  create_vgrid_lsc2_v2.py  cruise.py  cut_mesh.py  dicu_schism.py  download_hrr.py  download_hrrr.py  embed_raster.py  error_detect.py  (+92 more)
schimpy/util/: __init__.py  yaml_load.py
scripts/: archive_ts.py  clip_beyond_subdomain.py  install_docs_extras.py  load_setup_py_data.py
tests/: __init__.py  run_alltests.py  test_bctides.py  test_command_comment_preserving.py  test_convert_vgrid.py  test_create_vgrid_lsc2_v2.py  test_model_time.py  test_namelist.py  test_namelist_paramout.py  test_params.py  test_prepare_schism.py  test_relocate_source_sink.py  test_sav_density_raster.py  test_schimpy.py  test_schism_linestring.py  test_schism_mesh.py  test_schism_polygon.py  test_schism_vertical_mesh.py  test_schism_yaml.py  test_th_io.py  test_th_readwrite.py  test_triquadmesh.py  test_vgrid_nlayer_to_gr3.py
tests/testdata/: ex1.csv  ex2.csv  ex3.csv  ex4.csv  ex5.csv  meshout_point.dbf  meshout_point.shp  meshout_point.shx  meshout_polygon.dbf  meshout_polygon.shp  meshout_polygon.shx  param.nml  param.nml.test  param.out.nml  polygons.yaml  testmesh.2dm  testmesh.gr3  transect1a.csv  transect2a.csv  transect3a.csv  vgrid.in.new  vgrid.in.old  vgrid_sz.in
tests/testdata/raster/: sav_mapping.csv
tests/testdata/schism_linestring/: flowlines.yaml  test_linestrings.dbf  test_linestrings.shp  test_linestrings.shx
tests/testdata/schism_nudging/: nudge.yaml
tests/testdata/schism_yaml/: argparse.yaml  argparse2.yaml  (+11 more)
(+176 files in other folders)
