[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "schimpy"
dynamic = ["version"] # Placeholder; versioneer will manage this
description = "Python package for SCHISM"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    {name = "California Department of Water Resources", email = "Eli.Ateljevich@water.ca.gov"},
    {name = "California Department of Water Resources", email = "Kijin.Nam@water.ca.gov"}
]
requires-python = ">=3.9"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9"
]

keywords = ["schimpy", "SCHISM", "hydrodynamics", "mesh", "geometry", "GIS", "geospatial", "data processing"]

dependencies = [
    "geopandas",
    "vtools3>=3.8",
    "dms-datastore",
    "gdal",
    "xarray",
    "netcdf4",
    "scipy>=1.8,<1.11",
    "matplotlib",
    "statsmodels",
    "palettable",
    "pyyaml",
    "boto3",
    "beautifulsoup4",
    "pyproj",
    "nodepy",
    "sympy",
    "shapely>=2.0",
    "rasterstats",
    "param",
    "rtree",
    "click",
    "dask>=2022.11,<2023.5",
    "pyshp",
    "numpy>=1.23"
]

[project.optional-dependencies]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
    "numpydoc"
]
test = [
    "pytest>=3",
    "pytest-cov",
    "tox",
    "click"
]
[project.urls]
Homepage = "https://cadwrdeltamodeling.github.io/schimpy/"

[tool.flake8]
exclude = ["docs"]

[tool.pytest.ini_options]
collect_ignore = ["setup.py"]

[tool.setuptools.packages.find]
include = ["schimpy"]
exclude = ["docsrc"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[project.scripts]
sch = "schimpy.__main__:cli"
batch_metrics = "schimpy.batch_metrics:batch_metrics_cli"
clip_dems = "schimpy.clip_dems:clip_dems_cli"
contour_smooth = "schimpy.contour_smooth:contour_smooth_cli"
convert_mesh = "schimpy.convert_mesh:convert_mesh_cli"
convert_polygons = "schimpy.convert_polygons:convert_polygons_cli"
convert_linestrings = "schimpy.convert_linestrings:convert_linestrings_cli"
convert_points = "schimpy.convert_points:convert_points_cli"
combine_consume = "schimpy.combine_consume:combine_consume_cli"
prepare_schism = "schimpy.prepare_schism:main"
hotstart_inventory = "schimpy.hotstart_inventory:main"
create_vgrid_lsc2 = "schimpy.create_vgrid_lsc2:main"
schism_hotstart = "schimpy.schism_hotstart:main"
split_quad = "schimpy.split_quad:main"
model_time = "schimpy.model_time:main"
gen_elev2d = "schimpy.gen_elev2d:main"
small_areas = "schimpy.small_areas:main"
station = "schimpy.station:main"
create_hotstart = "schimpy.schism_hotstart:main"
create_nudging = "schimpy.nudging:main"
interpolate_structure = "schimpy.interpolate_structure:main"
merge_th = "schimpy.merge_th:main"

